--- a/AvaloniaApplication/App.axaml
+++ b/AvaloniaApplication/App.axaml
@@ -6,6 +6,7 @@
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
              
     <Application.Styles>
+        <StyleInclude Source="avares://Avalonia.Controls.ColorPicker/Themes/Fluent/Fluent.xaml" />
         <FluentTheme />
     </Application.Styles>
 </Application>
