--- a/AvaloniaApplication/Views/MainWindow.axaml
+++ b/AvaloniaApplication/Views/MainWindow.axaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:AvaloniaApplication="clr-namespace:AvaloniaApplication"
+        xmlns:cp="clr-namespace:Avalonia.Controls;assembly=Avalonia.Controls.ColorPicker"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="AvaloniaApplication.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
@@ -33,5 +34,6 @@
             </Menu>
             <TextBlock/>
         </DockPanel>
+        
     </AvaloniaApplication:CustomControl>
 </Window>
