--- a/AvaloniaApplication/App.axaml
+++ b/AvaloniaApplication/App.axaml
@@ -8,5 +8,6 @@
              
     <Application.Styles>
         <FluentTheme />
+        <StyleInclude Source="avares://Avalonia.Controls.ColorPicker/Themes/Fluent/Fluent.xaml"/>
     </Application.Styles>
 </Application>
