--- a/AvaloniaApplication/Views/ComparisonWindow.axaml
+++ b/AvaloniaApplication/Views/ComparisonWindow.axaml
@@ -6,5 +6,7 @@
         x:Class="AvaloniaApplication.Views.ComparisonWindow"
         Title="Algorithm Speed Comparison"
         Width="800" Height="600">
-        <Canvas Name="ComparisonCanvas" Grid.Row="1" Background="White" Margin="10"/>
+    <Grid>
+        <Canvas Name="ComparisonCanvas" Background="White" Margin="20"/>
+    </Grid>
 </Window> 
